fixed the row-gap

--- a/src/Pages/CSS/ShopCategory.css
+++ b/src/Pages/CSS/ShopCategory.css
@@ -29,8 +29,25 @@ border-radius: 40px;
 margin: 20px 170px;
 display: grid;
 grid-template-columns: repeat(4,1fr);
-gap:20px;
-
-
+row-gap:80px;
 
 }
+
+.shopcategory-loadmore{
+display:flex;
+justify-content: center;
+align-items: center;
+margin: 150px auto;
+width:233px;
+height:69px;
+border-radius: 75px;
+background: #ededed;
+font-size: 18px;
+font-weight: 500;
+
+}
+
+.shopcategory-loadmore:hover{filter: drop-shadow(0 0 0.75rem rgb(84, 88, 115));
+    transform: scale(1.1);
+    transition: 500ms;
+   }
